Added new match with semester type and test service